fix wrap content of product icon

--- a/src/components/catalogue/Catalogue.scss
+++ b/src/components/catalogue/Catalogue.scss
@@ -1,29 +1,27 @@
 @import '../../../bootstrap/scss/bootstrap.scss';
 @import '../../variables.scss';
 
-$iconSize: 2rem;
+$logoSize: 2rem;
 
 .ct_catalogue {
-   @extend .container-fluid;
    padding: 0.5rem 0;
    background-color: $primaryColor;
 
    .wrapper {
       @extend .container;
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
+      flex-flow: row wrap;
       justify-content: center;
    }
 }
 
 .ct_product {
-   margin: 0.2rem;
+   margin: 0.25rem;
    padding: 0.5rem;
    max-width: 540px;
+   flex-grow: 1;
    display: flex;
    flex-direction: row;
-   flex-wrap: wrap;
    align-items: center;
    background-color: white;
    color: $primaryColor;
@@ -32,15 +30,14 @@ $iconSize: 2rem;
    cursor: pointer;
 
    .icon {
+      height: $logoSize;
+      width: $logoSize;
       flex-grow: 0;
-      height: $iconSize;
-      width: $iconSize;
       background-size: cover;
    }
 
    .text {
       flex-grow: 1;
-      margin: 0 1rem;
-      text-align: left;
+      margin-left: 1rem;
    }
 }
